# memo

./: .env.example  .gitignore  README.md  commy.py  pyproject.toml
.github/workflows/: ci.yml
docs/: configuration.md  usage.md
src/memo/: __init__.py  cli.py
src/memo/ai/: __init__.py  prompts.py  providers.py
src/memo/config/: __init__.py  defaults.py  environment.py  manager.py
src/memo/git/: __init__.py  analyzer.py  operations.py
src/memo/interactive/: __init__.py  mode.py
src/memo/utils/: __init__.py  project.py
tests/: __init__.py  test_cli.py  test_config.py  test_environment.py  test_git.py
