[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commy-v2"
version = "0.1.0"
authors = [
    { name = "Vitor", email = "vitordonnangeloc@proton.me" },
]
description = "A CLI tool to generate conventional commit messages with AI."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "gitpython",
    "google-generativeai>=0.8.5",
    "openai",
    "python-dotenv",
]

[project.scripts]
cm = "commy:cli"
