[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "memo"
version = "1.2.0"
authors = [
    { name = "Vitor", email = "vitordonnangeloc@proton.me" },
]
description = "A CLI tool to generate conventional commit messages with AI."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "click",
    "google-generativeai>=0.8.5",
    "openai",
    "python-dotenv",
]

[project.scripts]
memo = "memo.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
